--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
+body, html {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  color: #333;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #09d3ac;
+.taskItem {
+    background: #f4f4f4;
+    width: 100px;
+    height: 100px;
+    border-radius: 15%;
+    margin: 5px;
+    display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h6 {
+    text-align: center;
+}
+
+.tasks {
+    display: flex;
+    width: 80vw;
 }
