--- a/src/components/nav/sideNav/SideNav.css
+++ b/src/components/nav/sideNav/SideNav.css
@@ -19,8 +19,12 @@
   height: 100%;
   list-style: none;
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .sideNav li {
@@ -37,4 +41,37 @@
 .sideNav a:active {
   text-decoration: none;
   color: #fdb827;
+}
+
+.separator {
+  border: 1px solid #d3d3d3;
+  margin-bottom: 10px;
+}
+
+.sideNav__profileImg {
+  display: flex;
+  flex-direction: column;
+  background: #d3d3d3;
+  border: solid black;
+  border-radius: 50%;
+  width: 170px;
+  height: 170px;
+  margin-left: 85px;
+  margin-top: 60px;
+}
+
+@media (min-width: 769px) {
+  .sideNav__profileImg {
+    width: 180px;
+    height: 180px;
+    margin-left: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .sideNav__profileImg {
+    width: 50%;
+    height: 20%;
+    margin-left: 25%;
+  }
 }
