--- a/src/components/nav/topNav/TopNav.css
+++ b/src/components/nav/topNav/TopNav.css
@@ -9,6 +9,10 @@
 
 .topNav__navigation {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   height: 100%;
   align-items: center;
   padding: 0 1rem;
