--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,23 @@ html {
   display: -ms-flexbox;
   display: -webkit-flex;
   width: 100%;
-  margin-top: 40px;
-  padding-left: 25px;
+  /* margin-top: 40px; */
+  /* padding-left: 25px; */
   height: 100vh;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  align-content: flex-start;
+  margin-right: 5%;
+  margin-top: 8px;
+  margin-left: 8px;
 }
 
 @media (max-width: 768px) {
   .tasks {
+    /* width: 100%; */
+    /* height: 100vh; */
+    margin-left: 27px;
   }
 }
 
