--- a/src/components/nav/sideNav/SideNav.css
+++ b/src/components/nav/sideNav/SideNav.css
@@ -4,7 +4,7 @@
   box-shadow: 3px 0px 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   width: 70%;
-  max-width: 350px;
+  max-width: 500px;
   top: 0;
   left: 0;
   z-index: 200;
@@ -50,6 +50,10 @@
 
 .sideNav__profileImg {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-direction: column;
   background: #d3d3d3;
   border: solid black;
@@ -66,17 +70,36 @@
   border-radius: 15%;
   margin-top: 40px;
   margin-left: 10px;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
 }
 
 @media (min-width: 769px) {
   .sideNav__profileImg {
     width: 180px;
     height: 180px;
-    margin-left: 80px;
+    margin-left: 32%;
   }
 
   .sideNav__tasks {
-    margin-left: 5px;
+    margin-left: 5%;
+  }
+
+  .sideNav ul {
+    height: 710px;
+  }
+
+  .sideNav__tasks .taskItem {
+    min-width: 50px;
+    min-height: 50px;
+    width: 100px;
+    height: 100px;
+    margin: 5px;
+  }
+
+  .sideNav__tasks .taskItem__title {
+    font-size: 1rem;
   }
 }
 
@@ -88,6 +111,25 @@
   }
 
   .sideNav__tasks {
-    margin-left: 3px;
+    margin: 10%;
   }
+
+  .sideNav__tasks .taskItem .taskItem__title {
+    font-size: 0.5rem;
+  }
+
+  .sideNav__tasks .taskItem {
+    min-width: 50px;
+    min-height: 50px;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+  }
+
+  .sideNav ul {
+    height: 270px;
+  }
+}
+
+@media (min-width: 769px) {
 }
