--- a/src/components/nav/sideNav/SideNav.css
+++ b/src/components/nav/sideNav/SideNav.css
@@ -87,7 +87,7 @@
   }
 
   .sideNav ul {
-    height: 710px;
+    height: 760px;
   }
 
   .sideNav__tasks .taskItem {
@@ -152,6 +152,22 @@
     margin-left: 34%;
     width: 33%;
     margin-top: 20px;
+  }
+}
+
+@media (max-width: 414px) {
+  .sideNav ul {
+    height: 410px;
+  }
+
+  .sideNav li {
+    margin: 0.5rem 0;
+  }
+
+  .sideNav__profileImg {
+    margin-left: 28%;
+    width: 45%;
+    height: 15%;
   }
 }
 
