--- a/src/components/backDrop/BackDrop.css
+++ b/src/components/backDrop/BackDrop.css
@@ -2,7 +2,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
   z-index: 100;
   top: 0;
 }
