--- a/src/components/nav/topNav/TopNav.css
+++ b/src/components/nav/topNav/TopNav.css
@@ -39,18 +39,20 @@
 }
 
 .topNav__navigation-items li {
-  padding: 0 15px;
+  /* padding: 0 15px; */
 }
 
 .topNav__navigation-items a {
   color: #f4f4f4;
-  margin: 5px;
+  margin: 10px;
   text-decoration: none;
   font-size: 1.5rem;
+  /* height: 24px;
+  width: 24px; */
 }
 
-.topNav__navigation-items a:hover,
-.topNav__navigation-items a:active,
+.topNav__navigation-items li:hover,
+.topNav__navigation-items li:active,
 .topNav__logo a:hover,
 .topNav__logo a:active {
   text-decoration: none;
