--- a/src/components/pages/appts/Appt.css
+++ b/src/components/pages/appts/Appt.css
@@ -1,19 +1,20 @@
-.summary {
+.appt {
   height: 50%;
   width: 60%;
   /* border: solid 1px red; */
   align-items: center;
   text-align: center;
   margin: 0 20%;
-  background: #f4f4f4;
+  background: #d3d3d3;
   position: fixed;
   margin-top: 10px;
   box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  opacity: 0.9;
+
+
 }
 
-.summary__title {
+.appt__title {
   font-size: 2rem;
   color: red;
   vertical-align: center;
@@ -27,7 +28,7 @@
 }
 
 @media (max-width: 768px) {
-  .summary__title {
+  .appt__title {
     font-size: 1rem;
   }
 }
