--- a/src/components/pages/analytics/Analytics.css
+++ b/src/components/pages/analytics/Analytics.css
@@ -9,8 +9,8 @@
   position: fixed;
   margin-top: 10px;
   box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.5);
-
   border-radius: 10px;
+  opacity: 0.9;
 }
 
 .analytics__title {
