--- a/src/components/pages/messages/Message.css
+++ b/src/components/pages/messages/Message.css
@@ -10,6 +10,7 @@
   margin-top: 10px;
   box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
+  opacity: 0.9;
 }
 
 .message__title {
